--- a/package.json
+++ b/package.json
@@ -41,11 +41,8 @@
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.2"
+    "jsdom": "^27.0.0",
+    "typescript": "~5.9.2",
+    "vitest": "^3.2.4"
   }
 }
