--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "e2e": "ng e2e"
   },
   "prettier": {
     "printWidth": 100,
@@ -39,9 +40,11 @@
     "@angular/build": "^20.3.2",
     "@angular/cli": "^20.3.2",
     "@angular/compiler-cli": "^20.3.0",
+    "@playwright/test": "1.55.1",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
     "jsdom": "^27.0.0",
+    "playwright-ng-schematics": "^2.1.1",
     "typescript": "~5.9.2",
     "vitest": "^3.2.4"
   }
