--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "private": true,
+  "packageManager": "pnpm@10.15.1",
   "dependencies": {
     "@angular/cdk": "^20.2.4",
     "@angular/common": "^20.3.0",
